Minor icon alignment fixes for feed btns

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -993,11 +993,11 @@ nav {
         background-repeat: no-repeat;
         padding: 6px 18px;
 
-        &.ical { background-position: 12px -23px; }
-        &.outlook { background-position: 12px -57px; }
-        &.rss { background-position: 12px 7px; }
-        &.xml { background-position: 12px -119px; }
-        &.json { background-position: 12px -91px; }
+        &.ical { background-position: 13px -23px; }
+        &.outlook { background-position: 13px -57px; }
+        &.rss { background-position: 13px 7px; }
+        &.xml { background-position: 13px -119px; }
+        &.json { background-position: 13px -91px; }
     }
 }
 
